DEVOPS-1556: Add export-options to runtime
DEVOPS-1556 (Switch default tycho build to java 17 )


(This commit was moved from knime-core-arrow. Original id: f8caf531f414817719895da7369ea20475911f6f)