@@ -30,6 +30,21 @@
 					</dependency-resolution>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        ${failsafeArgLine}
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.nio.channels=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
